[gd_scene load_steps=5 format=3 uid="uid://dpu0r01g08cg3"]

[ext_resource type="Script" uid="uid://df74itlomy7yj" path="res://scripts/core/simulation_engine.gd" id="1_sim"]
[ext_resource type="Script" uid="uid://dqoc4rfbl715i" path="res://scenes/main.gd" id="3_main"]
[ext_resource type="PackedScene" uid="uid://baalr12vqcr16" path="res://objects/test_vehicle.tscn" id="4_tbgi4"]
[ext_resource type="PackedScene" uid="uid://ctf1l2qvnhxgs" path="res://scenes/entities/stoplight.tscn" id="5_stoplight"]

[node name="Main" type="Node2D"]
script = ExtResource("3_main")

[node name="SimulationEngine" type="Node" parent="."]
script = ExtResource("1_sim")

[node name="GameWorld" type="Node2D" parent="."]

[node name="Destination" type="Sprite2D" parent="GameWorld"]
modulate = Color(0, 1, 0, 0.5)
position = Vector2(700, 300)
scale = Vector2(0.3, 0.3)

[node name="TestVehicle" parent="GameWorld" instance=ExtResource("4_tbgi4")]

[node name="TestStoplight" parent="GameWorld" instance=ExtResource("5_stoplight")]
position = Vector2(400, 300)

[node name="UI" type="CanvasLayer" parent="."]

[node name="CodeEditor" type="TextEdit" parent="UI"]
offset_left = 20.0
offset_top = 450.0
offset_right = 400.0
offset_bottom = 570.0
placeholder_text = "Enter code here... (e.g., car.go())"

[node name="RunButton" type="Button" parent="UI"]
offset_left = 420.0
offset_top = 450.0
offset_right = 520.0
offset_bottom = 490.0
text = "Run Code"

[node name="StatusLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 50.0
text = "Status: Ready"

[node name="InstructionsLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 60.0
offset_right = 600.0
offset_bottom = 160.0
text = "Instructions:
- car.go() / car.stop() / car.turn_left() / car.turn_right() / car.wait(N)
- stoplight.set_green() / stoplight.set_red() / stoplight.set_yellow()
- Space: pause/resume | R: reset | +/-: speed | S: step"

[node name="SpeedLabel" type="Label" parent="UI"]
offset_left = 420.0
offset_top = 500.0
offset_right = 600.0
offset_bottom = 530.0
text = "Speed: 1.0x"

[node name="ResultPopup" type="Panel" parent="UI"]
visible = false
offset_left = 200.0
offset_top = 150.0
offset_right = 600.0
offset_bottom = 350.0

[node name="ResultTitle" type="Label" parent="UI/ResultPopup"]
offset_left = 20.0
offset_top = 20.0
offset_right = 380.0
offset_bottom = 60.0
horizontal_alignment = 1
vertical_alignment = 1
text = "LEVEL COMPLETE!"

[node name="ResultMessage" type="Label" parent="UI/ResultPopup"]
offset_left = 20.0
offset_top = 70.0
offset_right = 380.0
offset_bottom = 110.0
horizontal_alignment = 1
vertical_alignment = 1
text = "Stars: 3/3"

[node name="RetryButton" type="Button" parent="UI/ResultPopup"]
offset_left = 50.0
offset_top = 130.0
offset_right = 180.0
offset_bottom = 170.0
text = "Retry"

[node name="NextButton" type="Button" parent="UI/ResultPopup"]
offset_left = 220.0
offset_top = 130.0
offset_right = 350.0
offset_bottom = 170.0
text = "Next Level"
